# fency-pgn

./: Cargo.toml
src/: lib.rs
src/utils/: castling.rs  color.rs  coord.rs  draw.rs  figure.rs  game.rs  mod.rs  piece.rs
