[package]
name = "fency-pgn"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jawerg/fency-pgn"
repository = "https://github.com/jawerg/fency-pgn"
keywords = ["chess", "FEN", "SAN"]
description = "A converter from Standard Algebraic Notation (SAN) moves to the resulting State of a Game."

[dependencies]
regex = "1.5.4"