[package]
name = "fency-pgn"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jawerg/fency-pgn"
repository = "https://github.com/jawerg/fency-pgn"
keywords = ["chess", "FEN", "SAN"]
description = "A converter from Standard Algebraic Notation (SAN) moves to the resulting State of a Game."

[dependencies]
regex = "1.5.4"


[lib]
name = "fency_pgn"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.2"
features = ["abi3-py311"]